fixed gap

--- a/activity7/style.css
+++ b/activity7/style.css
@@ -15,7 +15,7 @@
    
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.37);
-
+    padding: 20px;
     border-radius: 15px;
 }
 
@@ -23,13 +23,13 @@
     width: 90px;
 }
 
-/* #one{
+#one{
     width: 100px;
 }
 
 #two{
     width:  150px;
-} */
+}
 
 .container{
     display: flex;
@@ -77,6 +77,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 20px;
 }
 
 
